tests/invalid/invalid_match_type.eff
type a = A 
type b = B 
;;
let a = [A] in
match a with
  | B -> ()